precommit: Fix: corrige varias partes do codigo e adiciona eslint e style lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,11 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "modules": true,
+            "experimentalObjectRestSpread": true
         },
-        "ecmaVersion": 12,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "plugins": [
