--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --fix .",
+    "stylelint": "stylelint ./src/**/*.scss",
+    "precommit": "yarn lint && yarn stylelint"
   },
   "dependencies": {
     "@hapi/cryptiles": "^5.1.0",
@@ -47,6 +50,10 @@
     "react-is": "^17.0.1",
     "sass": "^1.32.8",
     "sass-loader": "~8.0.2",
+    "stylelint": "~13.7.1",
+    "stylelint-config-recommended-scss": "~4.2.0",
+    "stylelint-config-standard-scss": "~1.1.0",
+    "stylelint-scss": "~3.18.0",
     "typescript": "^4.1.2",
     "webpack": "^4.0.0"
   }
