--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "^4.0.1",
+    "pre-commit": "~1.2.2",
     "html-webpack-plugin": "^4.3.0",
     "next-purgecss": "^4.0.0",
     "prettier": "^2.2.0",
