--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "stylelint-scss": "~3.18.0",
     "typescript": "^4.1.2",
     "webpack": "^4.0.0"
-  }
+  },
+  "pre-commit": [
+    "precommit"
+  ]
 }
