--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "precommit": "yarn lint && yarn stylelint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@hapi/cryptiles": "^5.1.0",
     "@next/bundle-analyzer": "^10.0.2",
     "@zeit/next-css": "^1.0.1",
@@ -44,9 +49,9 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "^4.0.1",
-    "pre-commit": "~1.2.2",
     "html-webpack-plugin": "^4.3.0",
     "next-purgecss": "^4.0.0",
+    "pre-commit": "~1.2.2",
     "prettier": "^2.2.0",
     "react-is": "^17.0.1",
     "sass": "^1.32.8",
